changes in css for text visibility and smoothness (fix for Electron)

--- a/web/css/read.garden-viewer.css
+++ b/web/css/read.garden-viewer.css
@@ -127,11 +127,15 @@ div.rg-content-wrapper #rg-content-placeholder > div a {
   pointer-events: auto !important;
 }
 
+.rg-fixed-layout div.rg-content-wrapper div#rg-content-placeholder {
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+  transform: translateZ(0);
+}
+
 .rg-fixed-layout div.rg-content-wrapper div#rg-content-placeholder > .rg-fixed-content-container {
   position: absolute;
   margin: 0;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
 }
 
 .rg-fixed-layout div.rg-content-wrapper div#rg-content-placeholder > .rg-fixed-content-container.rg-avoid-invert {
